Этап 1. Рефакторинг кода